# Nautilus Actions
# A Nautilus extension which offers configurable context menu actions.
#
# Copyright (C) 2005 The GNOME Foundation
# Copyright (C) 2006, 2007, 2008 Frederic Ruaudel and others (see AUTHORS)
# Copyright (C) 2009, 2010 Pierre Wieser and others (see AUTHORS)
#
# This Program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 2 of
# the License, or (at your option) any later version.
#
# This Program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public
# License along with this Library; see the file COPYING.  If not,
# write to the Free Software Foundation, Inc., 59 Temple Place,
# Suite 330, Boston, MA 02111-1307, USA.
#
# Authors:
#   Frederic Ruaudel <grumz@grumz.net>
#   Rodrigo Moya <rodrigo@gnome-db.org>
#   Pierre Wieser <pwieser@trychlos.org>
#   ... and many others (see AUTHORS)

#include $(top_srcdir)/gtk-doc.make

# The name of the module.
#DOC_MODULE = nautilus-actions

# The top-level SGML file.
#DOC_MAIN_SGML_FILE = nautilus-actions.xml

# Extra options to supply to gtkdoc-scan
#SCAN_OPTIONS = \
#	--ignore-headers="config.h devkit-disks-daemon-glue.h devkit-disks-device-glue.h gdu-private.h gdu-marshal.h gdu-shared.h" \
#	--rebuild-sections

# The directory containing the source code. Relative to $(srcdir)
#DOC_SOURCE_DIR = ../src/gdu --source-dir=../src/gdu-gtk

# Used for dependencies
#HFILE_GLOB = $(top_srcdir)/src/gdu*/*.h
#CFILE_GLOB = $(top_srcdir)/src/gdu*/*.c

# Headers to ignore
IGNORE_HFILES = \
	$(NULL)

# CFLAGS and LDFLAGS for compiling scan program. Only needed
# if $(DOC_MODULE).types is non-empty.
#INCLUDES = \
#	$(GTK_CFLAGS)								\
#	$(DBUS_GLIB_CFLAGS)							\
#	-I$(top_srcdir)/src 						\
#	-I$(top_builddir)/src						\
#	-I$(top_srcdir)/src/gdu						\
#	-I$(top_builddir)/src/gdu					\
#	-I$(top_srcdir)/src/gdu-gtk					\
#	-I$(top_builddir)/src/gdu-gtk				\
#	$(NULL)

#GTKDOC_LIBS = \
#	$(GLIB2_LIBS)								\
#	$(GIO2_LIBS)								\
#	$(GIO_UNIX2_LIBS)							\
#	$(DBUS_GLIB_LIBS)							\
#	$(GNOME_KEYRING_LIBS)						\
#	$(top_builddir)/src/gdu/libgdu.la			\
#	$(top_builddir)/src/gdu-gtk/libgdu-gtk.la	\
#	$(NULL)

# Extra options to supply to gtkdoc-mkdb
#MKDB_OPTIONS = \
#	--sgml-mode 								\
#	--output-format=xml							\
#	--ignore-files="devkit-disks-daemon-glue.h devkit-disks-device-glue.h gdu-private.h gdu-marshal.h gdu-shared.h"

# Extra options to supply to gtkdoc-mktmpl
MKTMPL_OPTIONS = \
	$(NULL)

# Non-autogenerated SGML files to be included in $(DOC_MAIN_SGML_FILE)
content_files = \
	version.xml									\
	$(NULL)

# Images to copy into HTML directory
HTML_IMAGES = \
	$(NULL)

# Extra options to supply to gtkdoc-fixref
FIXXREF_OPTIONS = \
	$(NULL)

MAINTAINERCLEANFILES = \
	*~											\
	Makefile.in									\
	$(NULL)

#CLEANFILES += \
#	*~											\
#	gnome-disk-utility-scan*					\
#	gnome-disk-utility.args						\
#	gnome-disk-utility.hierarchy				\
#	gnome-disk-utility.interfaces				\
#	gnome-disk-utility.prerequisites			\
#	gnome-disk-utility.signals					\
#	*.bak										\
#	gnome-disk-utility-decl-list.txt			\
#	gnome-disk-utility-decl.txt					\
#	gnome-disk-utility-overrides.txt			\
#	gnome-disk-utility-undeclared.txt			\
#	gnome-disk-utility-undocumented.txt			\
#	gnome-disk-utility-sections.txt				\
#	*.stamp										\
#	-rf html xml tmpl							\
#	$(NULL)

# Version information for marking the documentation
EXTRA_DIST = version.xml.in
