# Nautilus Actions
# A Nautilus extension which offers configurable context menu actions.
#
# Copyright (C) 2005 The GNOME Foundation
# Copyright (C) 2006, 2007, 2008 Frederic Ruaudel and others (see AUTHORS)
# Copyright (C) 2009, 2010 Pierre Wieser and others (see AUTHORS)
#
# This Program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 2 of
# the License, or (at your option) any later version.
#
# This Program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public
# License along with this Library; see the file COPYING.  If not,
# write to the Free Software Foundation, Inc., 59 Temple Place,
# Suite 330, Boston, MA 02111-1307, USA.
#
# Authors:
#   Frederic Ruaudel <grumz@grumz.net>
#   Rodrigo Moya <rodrigo@gnome-db.org>
#   Pierre Wieser <pwieser@trychlos.org>
#   ... and many others (see AUTHORS)

# This includes the standard gtk-doc make rules, copied by gtkdocize.
include $(top_srcdir)/gtk-doc.make

DOC_MODULE = nautilus-actions

DOC_MODULE_VERSION = 3

DOC_MAIN_SGML_FILE = $(DOC_MODULE)-docs.xml

doc_sections = $(DOC_MODULE)-sections.txt

# from the public API documentation point of view
# we have to ignore all headers in src/core, and all corresponding source
# that is, only consider in src/core .c sources whose header is in src/api

core_headers = \
	na-exporter.h								\
	na-export-format.h							\
	na-factory-object.h							\
	na-factory-provider.h						\
	na-gnome-vfs-uri.h							\
	na-gtk-utils.h								\
	na-iabout.h									\
	na-importer-ask.h							\
	na-importer.h								\
	na-io-provider.h							\
	na-ipivot-consumer.h						\
	na-iprefs.h									\
	na-module.h									\
	na-pivot.h									\
	na-selected-info.h							\
	na-tokens.h									\
	na-updater.h								\
	$(NULL)

# Extra options to supply to gtkdoc-scan
#	--ignore-headers="config.h devkit-disks-daemon-glue.h devkit-disks-device-glue.h gdu-private.h gdu-marshal.h gdu-shared.h"
#	--rebuild-sections
SCAN_OPTIONS = \
	--rebuild-types								\
	$(NULL)

# The directory containing the source code. Relative to $(srcdir)
DOC_SOURCE_DIR = \
	$(top_srcdir)/src/api 						\
	--source-dir=$(top_srcdir)/src/core			\
	$(NULL)

# Used for dependencies
#HFILE_GLOB = $(top_srcdir)/src/gdu*/*.h
#CFILE_GLOB = $(top_srcdir)/src/gdu*/*.c

# Headers to ignore
IGNORE_HFILES = \
	$(core_headers)								\
	$(NULL)

# CFLAGS and LDFLAGS for compiling scan program.
# Only needed if $(DOC_MODULE).types is non-empty.
AM_CPPFLAGS = \
	-I $(top_srcdir)/src						\
	$(NAUTILUS_ACTIONS_CFLAGS)					\
	$(NULL)

core_libdir = $(top_builddir)/src/core/.libs

AM_LDFLAGS = \
	$(NAUTILUS_ACTIONS_LIBS)					\
	$(core_libdir)/libna-core.so				\
	$(NULL)

# Need this to be able to set ourselves GTKDOC_RUN
# This is extracted from gtk-doc.make
if GTK_DOC_USE_LIBTOOL
orig_gtkdoc_run = $(LIBTOOL) --mode=execute
else
orig_gtkdoc_run = sh -c
endif

GTKDOC_RUN = \
	LD_LIBRARY_PATH=$(core_libdir)				\
	$(orig_gtkdoc_run)							\
	$(NULL)

# Extra options to supply to gtkdoc-mkdb
#	--ignore-files="devkit-disks-daemon-glue.h devkit-disks-device-glue.h gdu-private.h gdu-marshal.h gdu-shared.h"
MKDB_OPTIONS = \
	--sgml-mode 								\
	--output-format=xml							\
	$(NULL)

# Extra options to supply to gtkdoc-mktmpl
MKTMPL_OPTIONS = \
	$(NULL)

# Non-autogenerated SGML files to be included in $(DOC_MAIN_SGML_FILE)
content_files = \
	$(xml_files)								\
	$(NULL)

# Images to copy into HTML directory
HTML_IMAGES = \
	$(NULL)

# Extra options to supply to gtkdoc-fixref
FIXXREF_OPTIONS = \
	$(NULL)

MAINTAINERCLEANFILES = \
	*~											\
	Makefile.in									\
	$(NULL)

xml_in_files = \
	version.xml.in								\
	$(NULL)

xml_files = $(xml_in_files:.xml.in=.xml)

#CLEANFILES += \
#	*~											\
#	gnome-disk-utility-scan*					\
#	gnome-disk-utility.args						\
#	gnome-disk-utility.hierarchy				\
#	gnome-disk-utility.interfaces				\
#	gnome-disk-utility.prerequisites			\
#	gnome-disk-utility.signals					\
#	*.bak										\
#	gnome-disk-utility-decl-list.txt			\
#	gnome-disk-utility-decl.txt					\
#	gnome-disk-utility-overrides.txt			\
#	gnome-disk-utility-undeclared.txt			\
#	gnome-disk-utility-undocumented.txt			\
#	gnome-disk-utility-sections.txt				\
#	*.stamp										\
#	-rf html xml tmpl							\
#	$(NULL)

# Version information for marking the documentation
EXTRA_DIST += \
	$(xml_in_files)								\
	$(NULL)

#TESTS = $(GTKDOC_CHECK)
